@@ -2,6 +2,7 @@
 Version: 1.1.6
 Date: ????
   Changes:
+    - Remove use of script.raise_event.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 2020-05-23
